# web-library

./: .env  .env.development  .env.docker  .env.example  .env.prod.example  .env.production  .gitignore  BATCH_TRANSLATION_DESIGN.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_PLAN.md  DOCKER.md  Dockerfile.web  Dockerfile.web-fix  LIGHTWEIGHTING_SUMMARY.md  Makefile  Makefile.docker  PROJECT_STRUCTURE_ANALYSIS.md  README.md  ROUTE_ANALYSIS.md  SMART_LINK_ROUTING_DESIGN.md  TEMPLATES_REFACTOR_PLAN.md  TEMPLATE_ANALYSIS.md  USAGE_GUIDE.md  WEB_MODULE_ANALYSIS.md  code_test.html  core_refactoring_plan.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  english_test.html  env_refactor_summary.md  env_system_complete.md  example_translated.html  final_test.html  httpbin_translated.html  image_test.html  kagi_help_translated.html  kagi_translated.html  kagi_vs_competition_original.html  (+10 more)
.github/workflows/: build_gnu_linux.yml  build_macos.yml  build_windows.yml  ci-netbsd.yml  ci.yml
cargo/: config.toml
docs/: API_ANALYSIS_REPORT.md  NEW_API_SPECIFICATION.md  PROJECT_ANALYSIS.md  SCROLL_SYNC_SOLUTION.md  SCROLL_SYNC_TROUBLESHOOTING.md  THEME_SYSTEM.md  environment_variables.md
examples/: env_demo.rs  generate_env_docs.rs
scripts/: validate_env.sh
src/: CLAUDE.md  core.rs  core_original_backup.rs  env.rs  html_builder.rs  lib.rs  main.rs  redis_cache.rs  translation.rs  translation.rs.backup  translation_legacy.rs  web.rs  web.rs.bak  web.rs.old  web_main.rs
src/builders/: html_builder.rs  mod.rs
src/network/: cache.rs  cookies.rs  mod.rs  session.rs
src/parsers/: css.rs  html.rs  html_original_backup.rs  js.rs  link_rewriter.rs  mod.rs
src/parsers/html/: assets.rs  complex_element_handlers.rs  dom.rs  dom_walker.rs  element_handlers.rs  metadata.rs  mod.rs  parser.rs  serializer.rs  utils.rs  walker.rs  walker_original_backup.rs  walker_refactored.rs
src/translation/: batch.rs  cache.rs  collector.rs  config.rs  error.rs  filters.rs  mod.rs  processor.rs  service.rs
src/translation/config/: manager.rs  mod.rs
src/translation/core/: engine.rs  mod.rs  service.rs
src/translation/pipeline/: batch.rs  collector.rs  filters.rs  mod.rs
src/translation/storage/: cache.rs  mod.rs
src/translation_backup/: cache_old.rs  config_old.rs  mod_old.rs  service_old.rs
src/utils/: mod.rs
src/web/: config.rs  mod.rs  routes.rs  templates.rs  theme.rs  types.rs
src/web/handlers/: mod.rs  pages.rs  smart_routing.rs
src/web/handlers/api/: bookmarklet.rs  cache.rs  content.rs  interceptor_script.rs  library.rs  library_extras.rs  link_status.rs  mod.rs  process.rs  theme.rs  translation.rs
src/web/services/: cache_query_engine.rs  mod.rs
static/: .gitkeep
templates/: FILE_CLASSIFICATION.md  LIBRARY_MIGRATION_TODO.md  REFACTOR_SUMMARY.md  TEMPLATE_MIGRATION.md  index-new.html  index.html
templates/assets/css/: base.css  components.css  library-pagination.css  library-table.css  library-toolbar.css  library.css  main.css  monolith-ui-components.css  nav-toggle.css  responsive.css  theme-base.css  themes.css
templates/assets/js/: interceptor-compat-test.js  library-data.js  monolith-translator.js  smart-link-interceptor-lite.js  smart-link-interceptor-optimized.js  smart-link-interceptor.js
templates/assets/js/components/: library.js  nav-toggle.js  theme.js  translator.js  ui.js
templates/assets/js/core/: api.js  app.js
templates/components/: library-table.html  library-toolbar.html
templates/core/: index.html  library.html  simple_index.html
templates_backup/: README.md  bookmarklet.html  index-new.html  index-themed.html  index.html  library-debug.html  library-modules.md  library-original.html  library.html
templates_backup/assets/: config.json
templates_backup/assets/css/: library-mongo.css  library-responsive.css
templates_backup/assets/js/: library-core.js  library-manager.js  library-ui.js  scroll-sync-fix.js  simple-scroll-sync.js
templates_backup/components/: library-header.html  library-navbar.html  library-pagination.html
tests/: cache_system.rs  error_handling.rs  translation_pipeline.rs
tests/common/: mod.rs
tests/core/: format_output_path.rs
