[package]
name = "monolith"
version = "2.11.0"
edition = "2021"
authors = [
    "Sunshine <snshn@tutanota.com>",
    "Mahdi Robatipoor <mahdi.robatipoor@gmail.com>",
    "Emmanuel Delaborde <th3rac25@gmail.com>",
    "Emi Simpson <emi@alchemi.dev>",
    "rhysd <lin90162@yahoo.co.jp>",
    "Andriy Rakhnin <a@rakhnin.com>",
]
description = "CLI tool and library for saving web pages as a single HTML file"
homepage = "https://github.com/Y2Z/monolith"
repository = "https://github.com/Y2Z/monolith"
readme = "README.md"
license = "CC0-1.0"
keywords = ["web", "http", "html", "download", "command-line"]
categories = ["command-line-utilities", "web-programming"]
include = ["src/*.rs", "Cargo.toml"]

[features]
default = ["cli"]
cli = ["clap", "tempfile"]
web = [
    "axum",
    "tower-http", 
    "tokio",
    "serde",
    "serde_json",
    "mongodb",
    "bson",
    "tracing",
    "tracing-subscriber",
    "futures",
    "zip",
]
translation = [
    "markdown-translator",
    "serde",
    "serde_json",
    "tokio",
    "tracing",
    "thiserror",
    "blake3",
    "toml",
    "config",
    "shellexpand",
    "lru",
    "dashmap",
    "rayon",
    "tower",
    "metrics",
    "dotenv",
]
vendored-openssl = ["openssl/vendored"]

[dependencies]
# Core dependencies (always included)
atty = "0.2.14"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
cssparser = "0.35.0"
encoding_rs = "0.8.35"
html5ever = "0.29.1"
markup5ever_rcdom = "0.5.0-unofficial"
# 使用系统OpenSSL，不使用vendored特性以加快编译速度
openssl = "0.10.72"
percent-encoding = "2.3.1"
redb = "2.4.0"
sha2 = "0.10.9"
url = "2.5.4"
uuid = { version = "1.0", features = ["v4", "v5"] }

# Regex with optimized features
regex = { version = "1.11.1", default-features = false, features = ["std", "perf-dfa", "unicode-perl"] }

# HTTP client with compression support
reqwest = { version = "0.12.15", default-features = false, features = ["default-tls", "blocking", "gzip", "brotli", "deflate"] }

# CLI dependencies (optional)
clap = { version = "4.5.37", features = ["derive"], optional = true }
tempfile = { version = "3.19.1", optional = true }

# Web server dependencies (optional)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
tower = { version = "0.4", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }
futures = { version = "0.3", optional = true }

# Database dependencies (optional)
mongodb = { version = "3.1", optional = true }
bson = { version = "2.13", features = ["chrono-0_4"], optional = true }

# Translation dependencies (optional)
markdown-translator = { git = "https://github.com/yuzheqianlv/translation-lib.git", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.9", optional = true }
config = { version = "0.14", optional = true }
thiserror = { version = "1.0", optional = true }
blake3 = { version = "1.0", optional = true }
shellexpand = { version = "3.1", optional = true }
dotenv = { version = "0.15", optional = true }

# Concurrency and caching dependencies (optional)
rayon = { version = "1.8", optional = true }
dashmap = { version = "5.5", optional = true }
lru = { version = "0.12", optional = true }

# Logging dependencies (optional)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
metrics = { version = "0.22", optional = true }

# Archive dependencies (optional)
zip = { version = "0.6", optional = true }

[dev-dependencies]
assert_cmd = "2.0.17"

[lib]
name = "monolith"
path = "src/lib.rs"

[[bin]]
name = "monolith"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "monolith-web"
path = "src/web_main.rs"
required-features = ["web"]